added pearson correlation coefficient and p-value

--- a/datasci_3_eda.ipynb
+++ b/datasci_3_eda.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWJBbSItaOY94cmmbKnLTC",
+      "authorship_tag": "ABX9TyPDXqU5hOuFczYckMFqUNxB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -966,6 +966,79 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Pearson Correlation Coefficient"
+      ],
+      "metadata": {
+        "id": "RasNG9JAtGpl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Loading Statistical functions packages\n",
+        "from scipy.stats import pearsonr"
+      ],
+      "metadata": {
+        "id": "M_TeV9X-tKLY"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Using Pearson correlation coefficient function to measure the linear relationship between two datasets\n",
+        "#Comparing number of deaths and number of cases\n",
+        "pearson_corr, p_value = pearsonr(df[\"# of Deaths\"], df[\"# of Cases\"])"
+      ],
+      "metadata": {
+        "id": "W9L5J_w7tNNG"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Printing the calculated Pearson correlation coefficient value to 2 decimal values\n",
+        "print(f\"Pearson Correlation Coefficient: {pearson_corr:.2f}\")\n",
+        "\n",
+        "#Printing the calculated P-value to 4 decimal values\n",
+        "print(f\"P-value: {p_value:.4f}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZLcbjqUptY48",
+        "outputId": "06341a8d-eb1d-4f67-d5dc-a84c340ba37f"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pearson Correlation Coefficient: 0.74\n",
+            "P-value: 0.0000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The *r* or Pearson Correlation Coefficient is 0.74, which means that there is a strong correlation.\n",
+        "\n",
+        "The P-Value being very close to 0 means that it is highly likely that there is a correlation."
+      ],
+      "metadata": {
+        "id": "LPSItT2-w-T2"
+      }
     }
   ]
 }
